@@ -74,6 +74,7 @@ Version 1.4.23 - SVN
     Williams).  See $display_imap_login_error in the configuration
     file or "4.  General Options ==> 22. Display login error from IMAP"
     in the configuration tool.
+  - Configuration tool now shows the SquirrelMail version
 
 Version 1.4.22 - 12 July 2011
 -----------------------------
